org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/VariableDecl/VariableDecl_Res_valid_001/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project VariableDecl_Res_valid_001 {
	import "${project.baseUri}/001_VariableDecl_Res_valid.kmt"
}
