org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/CallOperation/CallOperation_deprecated/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/LATEST"

importProject library_standard
	

	
//metamodel test_hello
project VariableDecl {

	
	import "${project.baseUri}/003_CallOperation_deprecated.kmt" 

}